--- a/discover-ft/Dockerfile
+++ b/discover-ft/Dockerfile
@@ -1,7 +1,7 @@
 # vim:set ft=dockerfile:
 FROM       nuxeo/nuxeo:FT
 MAINTAINER Nuxeo <packagers@nuxeo.com>
-RUN perl -p -i -e "s/^#?nuxeo.wizard.done=.*$/nuxeo.wizard.done=false/g" /docker-entrypoint.sh
+RUN echo "nuxeo.wizard.done=false" > /docker-entrypoint-initnuxeo.d/nuxeo.conf
 ENTRYPOINT ["/docker-entrypoint.sh"]
 EXPOSE 8080
 CMD ["nuxeoctl","console"]
