--- a/templates/pre-8.10/Dockerfile.ubuntu
+++ b/templates/pre-8.10/Dockerfile.ubuntu
@@ -3,8 +3,7 @@ FROM       openjdk:8-jdk
 MAINTAINER Nuxeo <packagers@nuxeo.com>
 
 # Add needed convert tools
-RUN echo "deb http://http.debian.net/debian jessie-backports main contrib non-free" >> /etc/apt/sources.list \
- && apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     perl \
     locales \
     pwgen \
@@ -12,10 +11,10 @@ RUN echo "deb http://http.debian.net/debian jessie-backports main contrib non-fr
     ffmpeg2theora \
     ufraw \
     poppler-utils \
+    libreoffice \
     libwpd-tools \
     exiftool \
     ghostscript \
- && apt-get install -t jessie-backports libreoffice \
  && rm -rf /var/lib/apt/lists/*
 
 %%RUN%%
