--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ env:
  - VERSION=7.10 VARIANT=centos
  - VERSION=10.2
  - VERSION=10.2 VARIANT=centos
+ - VERSION=10.3
+ - VERSION=10.3 VARIANT=centos
  - VERSION=8.10
  - VERSION=8.10 VARIANT=centos
  - VERSION=9.10
