--- a/10.10/rhel/Dockerfile
+++ b/10.10/rhel/Dockerfile
@@ -1,23 +1,58 @@
 # vim:set ft=dockerfile:
-FROM       openjdk:8-jdk
+FROM registry.access.redhat.com/rhel7
 MAINTAINER Nuxeo <packagers@nuxeo.com>
 
+LABEL name="nuxeo/nuxeo" \
+      vendor="Nuxeo" \
+      version="%%NUXEO_VERSION%%" \
+      release="1" \
+      summary="Nuxeo Digital Asset Platform" \
+      description="The Nuxeo platform image packaged as a container" \
+      url="https://www.nuxeo.com" \
+      run='docker run -tdi -p 8080:8080 --name ${NAME} ${IMAGE}' \
+      io.k8s.description="Starts a Nuxeo Platform server." \
+      io.k8s.display-name="Nuxeo" \
+      io.openshift.expose-services="8080/http" \
+      io.openshift.tags="nuxeo" \
+      io.openshift.min-memory="2Gi" \
+      io.openshift.min-cpu="2"
+
+# install java
+RUN yum-config-manager --disable rhel-7-server-htb-rpms && \
+    yum install -y \
+       java-1.8.0-openjdk java-1.8.0-openjdk-devel wget unzip
+
+#Add repositories need it for ffmpeg2theora and ffmpeg
+ARG EPEL_RPM_URL=https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+ARG NUX_GPG_KEY_URL=http://li.nux.ro/download/nux/RPM-GPG-KEY-nux.ro
+ARG NUX_DEXTOP_RPM_URL=http://li.nux.ro/download/nux/dextop/el7/x86_64/nux-dextop-release-0-1.el7.nux.noarch.rpm
+RUN wget ${EPEL_RPM_URL} \
+    && rpm -Uvh epel-release-latest-7*.rpm \
+    && rpm --import ${NUX_GPG_KEY_URL} \
+    && rpm -Uvh ${NUX_DEXTOP_RPM_URL}
+
+## must find another way to install it, need it for ffmpeg
+ARG NUX_DEXTOP_FRIBIDI_RPM_URL=ftp://ftp.pbone.net/mirror/li.nux.ro/download/nux/dextop/retired/libfribidi-0.19.2-3.el7.nux.x86_64.rpm
+RUN rpm -Uvh ${NUX_DEXTOP_FRIBIDI_RPM_URL}
+
+# enable repo for libreoffice
+RUN yum-config-manager --enable rhel-7-server-optional-rpms
 # Add needed convert tools
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN yum -y upgrade && yum -y install \
     perl \
-    locales \
-    pwgen \
-    imagemagick \
+    ImageMagick \
+    ffmpeg \
     ffmpeg2theora \
     ufraw \
     poppler-utils \
+    libreoffice-core  \
     libwpd-tools \
-    exiftool \
+    perl-Image-ExifTool \
     ghostscript \
-    libreoffice \
-    ffmpeg \
-    x264 \
- && rm -rf /var/lib/apt/lists/*
+    && yum clean all
+
+ADD licenses /licenses
+ADD help.1 /help.1
 
 
 # Remove setuid/setgid binaries from images for security
@@ -26,9 +61,9 @@ RUN find / -perm 6000 -type f -exec chmod a-s {} \; || true
 ENV NUXEO_USER nuxeo
 ENV NUXEO_HOME /opt/nuxeo/server
 ENV HOME /opt/nuxeo/server
-ARG NUXEO_VERSION=10.2
-ARG NUXEO_DIST_URL=http://community.nuxeo.com/static/releases/nuxeo-10.2/nuxeo-server-10.2-tomcat.zip
-ARG NUXEO_MD5=0e7fd86c27a06ada60d698fdc2063a01
+ARG NUXEO_VERSION=10.10
+ARG NUXEO_DIST_URL=http://community.nuxeo.com/static/releases/nuxeo-10.10/nuxeo-server-10.10-tomcat.zip
+ARG NUXEO_MD5=90ef2ac005020e880b6277510800c30c
 
 
 # Create Nuxeo user
