--- a/master/centos/nuxeo.conf
+++ b/master/centos/nuxeo.conf
@@ -18,8 +18,7 @@ JAVA_OPTS=$JAVA_OPTS -Dfile.encoding=UTF-8 -Dmail.mime.decodeparameters=true
 JAVA_OPTS=$JAVA_OPTS -Djava.util.Arrays.useLegacyMergeSort=true
 
 ## Log Garbage Collector informations into a file
-JAVA_OPTS=$JAVA_OPTS -Xloggc:"${nuxeo.log.dir}/gc.log" -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps
-
+JAVA_OPTS=$JAVA_OPTS -Xlog:gc*:file=${nuxeo.log.dir}/gc.log -verbose:gc
 
 nuxeo.force.generation=true
 nuxeo.templates=${env:NUXEO_DB_TYPE:default},docker,${env:NUXEO_TEMPLATES:docker}
