--- a/templates/pre-11.1/nuxeo.conf
+++ b/templates/pre-11.1/nuxeo.conf
@@ -18,7 +18,8 @@ JAVA_OPTS=$JAVA_OPTS -Dfile.encoding=UTF-8 -Dmail.mime.decodeparameters=true
 JAVA_OPTS=$JAVA_OPTS -Djava.util.Arrays.useLegacyMergeSort=true
 
 ## Log Garbage Collector informations into a file
-JAVA_OPTS=$JAVA_OPTS -Xlog:gc*:file=${nuxeo.log.dir}/gc.log -verbose:gc
+JAVA_OPTS=$JAVA_OPTS -Xloggc:"${nuxeo.log.dir}/gc.log" -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps
+
 
 nuxeo.force.generation=true
 nuxeo.templates=${env:NUXEO_DB_TYPE:default},docker,${env:NUXEO_TEMPLATES:docker}
