--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -17,6 +17,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libreoffice \
     ffmpeg \
     x264 \
+    lsof \
  && rm -rf /var/lib/apt/lists/*
 
 
@@ -72,7 +73,6 @@ WORKDIR $NUXEO_HOME
 COPY docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
 EXPOSE 8080
-EXPOSE 8787
 CMD ["nuxeoctl","console"]
 
 USER 1000
