--- a/templates/pre-11.1/Dockerfile.rhel
+++ b/templates/pre-11.1/Dockerfile.rhel
@@ -23,17 +23,17 @@ RUN yum-config-manager --disable rhel-7-server-htb-rpms && \
        java-1.8.0-openjdk java-1.8.0-openjdk-devel wget unzip
 
 #Add repositories need it for ffmpeg2theora and ffmpeg
-ARG EPEL_RPM_URL=https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-ARG NUX_GPG_KEY_URL=http://li.nux.ro/download/nux/RPM-GPG-KEY-nux.ro
-ARG NUX_DEXTOP_RPM_URL=http://li.nux.ro/download/nux/dextop/el7/x86_64/nux-dextop-release-0-1.el7.nux.noarch.rpm
-RUN wget ${EPEL_RPM_URL} \
-    && rpm -Uvh epel-release-latest-7*.rpm \
-    && rpm --import ${NUX_GPG_KEY_URL} \
-    && rpm -Uvh ${NUX_DEXTOP_RPM_URL}
+# ARG EPEL_RPM_URL=https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+# ARG NUX_GPG_KEY_URL=http://li.nux.ro/download/nux/RPM-GPG-KEY-nux.ro
+# ARG NUX_DEXTOP_RPM_URL=http://li.nux.ro/download/nux/dextop/el7/x86_64/nux-dextop-release-0-1.el7.nux.noarch.rpm
+# RUN wget ${EPEL_RPM_URL} \
+#     && rpm -Uvh epel-release-latest-7*.rpm \
+#     && rpm --import ${NUX_GPG_KEY_URL} \
+#     && rpm -Uvh ${NUX_DEXTOP_RPM_URL}
 
 ## must find another way to install it, need it for ffmpeg
-ARG NUX_DEXTOP_FRIBIDI_RPM_URL=ftp://ftp.pbone.net/mirror/li.nux.ro/download/nux/dextop/retired/libfribidi-0.19.2-3.el7.nux.x86_64.rpm
-RUN rpm -Uvh ${NUX_DEXTOP_FRIBIDI_RPM_URL}
+# ARG NUX_DEXTOP_FRIBIDI_RPM_URL=ftp://ftp.pbone.net/mirror/li.nux.ro/download/nux/dextop/retired/libfribidi-0.19.2-3.el7.nux.x86_64.rpm
+# RUN rpm -Uvh ${NUX_DEXTOP_FRIBIDI_RPM_URL}
 
 # enable repo for libreoffice
 RUN yum-config-manager --enable rhel-7-server-optional-rpms
@@ -41,8 +41,8 @@ RUN yum-config-manager --enable rhel-7-server-optional-rpms
 RUN yum -y upgrade && yum -y install \
     perl \
     ImageMagick \
-    ffmpeg \
-    ffmpeg2theora \
+#     ffmpeg \
+#     ffmpeg2theora \
     ufraw \
     poppler-utils \
     libreoffice-core  \
